@@ -1,4 +1,5 @@
 EXTRA_DIST = \
+	filters.c	\
 	fourier.c	\
 	display.c	\
 	component.c
